
[TestNoUnnecessaryTypeAssertion/invalid-0 - 1]
Diagnostic 1: unnecessaryAssertion (1:13 - 1:16)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const foo = <3>3;
     |             ~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-1 - 1]
Diagnostic 1: unnecessaryAssertion (1:13 - 1:18)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const foo = 3 as 3;
     |             ~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-10 - 1]
Diagnostic 1: unnecessaryAssertion (3:1 - 3:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | let bar: number = 1;
   3 | bar! + 1;
     | ~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-11 - 1]
Diagnostic 1: unnecessaryAssertion (3:1 - 3:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | let bar!: number;
   3 | bar! + 1;
     | ~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-12 - 1]
Diagnostic 1: unnecessaryAssertion (4:1 - 4:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | bar = 1;
   4 | bar! + 1;
     | ~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-13 - 1]
Diagnostic 1: unnecessaryAssertion (3:21 - 3:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 |         declare const y: number;
   3 |         console.log(y!);
     |                     ~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-14 - 1]
Diagnostic 1: unnecessaryAssertion (1:1 - 1:6)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | Proxy!;
     | ~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-15 - 1]
Diagnostic 1: unnecessaryAssertion (3:10 - 3:13)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | function foo<T extends string>(bar: T) {
   3 |   return bar!;
     |          ~~~~
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-16 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare const foo: Foo;
   3 | const bar = <Foo>foo;
     |             ~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-17 - 1]
Diagnostic 1: unnecessaryAssertion (3:25 - 3:38)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare const prop: string;
   3 | ['foo', 'bar'].includes(prop as string);
     |                         ~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-18 - 1]
Diagnostic 1: unnecessaryAssertion (3:15 - 3:61)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | async function mergeWithDefaults(loadModule: () => Promise<Record<string, unknown>>) {
   3 |   const mod = (await loadModule()) as Record<string, unknown>;
     |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 |   return { ...mod, extra: true };
---

[TestNoUnnecessaryTypeAssertion/invalid-19 - 1]
Diagnostic 1: unnecessaryAssertion (3:59 - 3:73)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | function unwrap(input: string | number): number {
   3 |   return typeof input === 'string' ? parseFloat(input) : (input as number);
     |                                                           ~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-2 - 1]
Diagnostic 1: unnecessaryAssertion (3:23 - 3:31)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const num = 42;
   3 | const alsoRedundant = num as 42;
     |                       ~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-20 - 1]
Diagnostic 1: contextuallyUnnecessary (4:9 - 4:10)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | let s: string | null = null;
   4 | nonNull(s!);
     |         ~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-21 - 1]
Diagnostic 1: contextuallyUnnecessary (3:26 - 3:27)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | const x: number | null = null;
   3 | const y: number | null = x!;
     |                          ~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-22 - 1]
Diagnostic 1: contextuallyUnnecessary (4:25 - 4:26)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | class Foo {
   4 |   prop: number | null = x!;
     |                         ~~
   5 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-23 - 1]
Diagnostic 1: unnecessaryAssertion (5:6 - 5:7)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | class Mx {
   5 |   @a(b!)
     |      ~~
   6 |   private prop = 1;
---

[TestNoUnnecessaryTypeAssertion/invalid-24 - 1]
Diagnostic 1: contextuallyUnnecessary (9:20 - 9:28)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   8 | function Test(props: { id?: string | number }) {
   9 |   return <div key={props.id!} />;
     |                    ~~~~~~~~~
  10 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-25 - 1]
Diagnostic 1: contextuallyUnnecessary (5:1 - 5:2)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   4 | y = x!;
   5 | y! = 0;
     | ~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-26 - 1]
Diagnostic 1: contextuallyUnnecessary (3:28 - 3:33)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | declare function foo(arg?: number): number | void;
   3 | const bar: number | void = foo()!;
     |                            ~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-27 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:16)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare function foo(): number;
   3 | const a = foo()!;
     |           ~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-28 - 1]
Diagnostic 1: unnecessaryAssertion (2:11 - 2:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const b = new Date()!;
     |           ~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-29 - 1]
Diagnostic 1: unnecessaryAssertion (2:11 - 2:18)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const b = (1 + 1)!;
     |           ~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-3 - 1]
Diagnostic 1: unnecessaryAssertion (3:21 - 3:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 |         type Foo = 3;
   3 |         const foo = <Foo>3;
     |                     ~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-30 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:25)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare function foo(): number;
   3 | const a = foo() as number;
     |           ~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-31 - 1]
Diagnostic 1: unnecessaryAssertion (3:11 - 3:23)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare function foo(): number;
   3 | const a = <number>foo();
     |           ~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-32 - 1]
Diagnostic 1: unnecessaryAssertion (4:2 - 4:12)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | declare function foo(): RT;
   4 | (foo() as RT).log;
     |  ~~~~~~~~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-33 - 1]
Diagnostic 1: unnecessaryAssertion (3:14 - 3:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | declare const arr: object[];
   3 | const item = arr[0]!;
     |              ~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-34 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:33)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (  3 + 5  ) as number;
     |             ~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-35 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:40)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (  3 + 5  ) /*as*/ as number;
     |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-36 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 6:3)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (  3 + 5
     |             ~~~~~~~~
   3 |   ) /*as*/ as //as
     | ~~~~~~~~~~~~~~~~~~
   4 |   (
     | ~~~
   5 |     number
     | ~~~~~~~~~~
   6 |   );
     | ~~~
   7 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-37 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:42)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (3 + (5 as number) ) as number;
     |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-38 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:33)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = 3 + 5/*as*/ as number;
     |             ~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-39 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:38)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = 3 + 5/*a*/ /*b*/ as number;
     |             ~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-4 - 1]
Diagnostic 1: unnecessaryAssertion (3:21 - 3:28)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 |         type Foo = 3;
   3 |         const foo = 3 as Foo;
     |                     ~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-40 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:29)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <(number)>(3 + 5);
     |             ~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-41 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:35)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = < ( number ) >( 3 + 5 );
     |             ~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-42 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:36)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <number> /* a */ (3 + 5);
     |             ~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-43 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:35)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <number /* a */>(3 + 5);
     |             ~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-44 - 1]
Diagnostic 1: unnecessaryAssertion (5:9 - 5:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 |   for (let i = 0; i < items.length; i++) {
   5 |     foo(items[i]!);
     |         ~~~~~~~~~
   6 |   }
---

[TestNoUnnecessaryTypeAssertion/invalid-45 - 1]
Diagnostic 1: unnecessaryAssertion (5:13 - 5:39)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | };
   5 | const bar = foo.a as string | undefined;
     |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-46 - 1]
Diagnostic 1: unnecessaryAssertion (5:13 - 5:39)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | };
   5 | const bar = foo.a as string | undefined;
     |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~
   6 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-47 - 1]
Diagnostic 1: unnecessaryAssertion (2:1 - 2:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | varDeclarationFromFixture!;
     | ~~~~~~~~~~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-48 - 1]
Diagnostic 1: unnecessaryAssertion (3:1 - 3:2)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | var x = 1;
   3 | x!;
     | ~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-49 - 1]
Diagnostic 1: unnecessaryAssertion (4:3 - 4:4)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | {
   4 |   x!;
     |   ~~
   5 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-5 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:16)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | const foo = 3;
   3 | const bar = foo!;
     |             ~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-50 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | class T {
   3 |   readonly a = 3 as 3;
     |                ~~~~~~
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-51 - 1]
Diagnostic 1: unnecessaryAssertion (5:16 - 5:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   4 | class T {
   5 |   readonly a = 10 as S;
     |                ~~~~~~~
   6 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-52 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:32)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | class T {
   3 |   readonly a = (3 + 5) as number;
     |                ~~~~~~~~~~~~~~~~~
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-53 - 1]
Diagnostic 1: contextuallyUnnecessary (3:31 - 3:50)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | const a = '';
   3 | const b: string | undefined = (a ? undefined : a)!;
     |                               ~~~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-54 - 1]
Diagnostic 1: unnecessaryAssertion (8:11 - 8:23)
Message: This assertion is unnecessary since it does not change the type of the expression.
   7 | declare const a: T.Value1;
   8 | const b = a as T.Value1;
     |           ~~~~~~~~~~~~~
   9 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-55 - 1]
Diagnostic 1: contextuallyUnnecessary (3:22 - 3:25)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   2 | const foo: unknown = {};
   3 | const bar: unknown = foo!;
     |                      ~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-56 - 1]
Diagnostic 1: contextuallyUnnecessary (4:5 - 4:8)
Message: This assertion is unnecessary since the receiver accepts the original type of the expression.
   3 | const baz: unknown = {};
   4 | foo(baz!);
     |     ~~~~
   5 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-57 - 1]
Diagnostic 1: unnecessaryAssertion (7:3 - 7:13)
Message: This assertion is unnecessary since it does not change the type of the expression.
   6 | if (isString(foo)) {
   7 |   <string>foo;
     |   ~~~~~~~~~~~
   8 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-58 - 1]
Diagnostic 1: unnecessaryAssertion (4:1 - 4:17)
Message: This assertion is unnecessary since it does not change the type of the expression.
   3 | declare const bar: Promise<Foo>;
   4 | <Promise<Foo>>bar;
     | ~~~~~~~~~~~~~~~~~
   5 |             
---

[TestNoUnnecessaryTypeAssertion/invalid-59 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:23)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = true as const;
     |           ~~~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-6 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:29)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = (3 + 5) as number;
     |             ~~~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-60 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>true;
     |           ~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-61 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = 1 as const;
     |           ~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-62 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:18)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>1;
     |           ~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-63 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:21)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = 1n as const;
     |           ~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-64 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:19)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>1n;
     |           ~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-65 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = `a` as const;
     |           ~~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-66 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:22)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = 'a' as const;
     |           ~~~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-67 - 1]
Diagnostic 1: unnecessaryAssertion (1:11 - 1:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | const a = <const>'a';
     |           ~~~~~~~~~~
---

[TestNoUnnecessaryTypeAssertion/invalid-68 - 1]
Diagnostic 1: unnecessaryAssertion (3:16 - 3:27)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | class T {
   3 |   readonly a = 'a' as const;
     |                ~~~~~~~~~~~~
   4 | }
---

[TestNoUnnecessaryTypeAssertion/invalid-69 - 1]
Diagnostic 1: unnecessaryAssertion (8:11 - 8:20)
Message: This assertion is unnecessary since it does not change the type of the expression.
   7 | declare const a: T.Value1;
   8 | const b = a as const;
     |           ~~~~~~~~~~
   9 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-7 - 1]
Diagnostic 1: unnecessaryAssertion (2:13 - 2:27)
Message: This assertion is unnecessary since it does not change the type of the expression.
   1 | 
   2 | const foo = <number>(3 + 5);
     |             ~~~~~~~~~~~~~~~
   3 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-8 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:26)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | type Foo = number;
   3 | const foo = (3 + 5) as Foo;
     |             ~~~~~~~~~~~~~~
   4 |       
---

[TestNoUnnecessaryTypeAssertion/invalid-9 - 1]
Diagnostic 1: unnecessaryAssertion (3:13 - 3:24)
Message: This assertion is unnecessary since it does not change the type of the expression.
   2 | type Foo = number;
   3 | const foo = <Foo>(3 + 5);
     |             ~~~~~~~~~~~~
   4 |       
---
